# gerrit-mcp-server

./: AGENT.md  GEMINI.md  README.md  build.py  pyproject.toml  requirements.txt  run_tests.py  server.py  uv-requirements.txt
docs/: available_tools.md  configuration.md  gemini-cli.md  testing.md
gerrit_mcp_server/: __main__.py  gerrit_command_argument_defs.json  main.py
tests/integration/: test_build_and_run.py
tests/unit/: test_get_circleci_status.py  test_list_change_comments.py  test_post_review_comment.py
