[project]
name = "gerrit-mcp-server"
version = "1.0.0"
description = "An MCP server for interacting with Gerrit via curl"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "uvicorn",
    "websockets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-env"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--asyncio-mode=auto -v --ignore=tests/e2e"
env = [
    "GERRIT_CONFIG_PATH=tests/test_config.json"
]

[project.scripts]
gerrit-mcp-server = "gerrit_mcp_server.main:cli_main"

[tool.setuptools]
packages = ["gerrit_mcp_server"]

[tool.setuptools.package-data]
gerrit_mcp_server = ["*.json"]
